2e-server-cfn-0.5.0.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Advanced MSA Infrastructure: Parameterized IP, Public EC2, DB with EBS, and EKS for Nginx/WAS Pods'


# 입력 순서를, 좀 더 정갈하게 하기 위해서 아래와 같이 설정.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "1. Service & Cluster - Basic info"
        Parameters:
          - ServiceName
          - KeyName
          - KubernetesVersion
      - Label:
          default: "2. Network & Infra Setting (VPC & Subnets)"
        Parameters:
          - VpcCidrBlock
          - PublicSubnet1Cidr
          - PublicSubnet2Cidr
          - PrivateAppSubnet1Cidr
          - PrivateAppSubnet2Cidr
          - PrivateDBSubnet1Cidr
          - PrivateDBSubnet2Cidr
      - Label:
          default: "3. System & Image Setting"
        Parameters:
          - LatestAmiId
    ParameterLabels:
      ServiceName:
        default: "ServiceName"
      KeyName:
        default: "EC2 Key Pair (KeyName)"
      KubernetesVersion:
        default: "EKS K8S Version"
      VpcCidrBlock:
        default: "VPC CIDR Range"
      PublicSubnet1Cidr:
        default: "Public Subnet 1 CIDR"
      PublicSubnet2Cidr:
        default: "Public Subnet 2 CIDR"
      PrivateAppSubnet1Cidr:
        default: "Private App Subnet 1 CIDR (Nodes)"
      PrivateAppSubnet2Cidr:
        default: "Private App Subnet 2 CIDR (Nodes)"

Parameters:
  ServiceName:
    Type: String
    Default: 'de-camping-msa'
    Description: 'Service name prefix for resource tagging'

  KeyName:
    Type: 'AWS::EC2::KeyPair::KeyName'
    Description: 'Select an existing EC2 KeyPair for SSH access'

  # --- IP 대역 파라미터 ---
  ## 대역 설정시, 중복 방지를 위해서. 마스킹 된 앞에서부터 20비트대부터 주소를 할당해야 합니다.
  ## 예를 들어 10.0.0.0/20을 바탕으로 한 default 대역을 할당하셨다면,
  ## 다음 대역은 10.0.0001 0000~1111 1111.* /20 으로 대역을 할당할 수 있습니다.
  ### 추가로 현재 테스트 중인, 공유 계정에서는 region별 최대 nat를 2개까지만 할당 가능하니, 이점 확인하시어
  ### 기존에 같은 CF로 할당된 vpc가 2개가 이미 있다면, 3번째 생성부터는 fail이 발생할 수 있습니다.
  ### 확인해서 작업해주세요.
  VpcCidrBlock: { Type: String, Default: '10.0.0.0/20' }
  PublicSubnet1Cidr: { Type: String, Default: '10.0.0.0/24' }
  PublicSubnet2Cidr: { Type: String, Default: '10.0.1.0/24' }
  PrivateDBSubnet1Cidr: { Type: String, Default: '10.0.2.0/24' }
  PrivateDBSubnet2Cidr: { Type: String, Default: '10.0.3.0/24' }
  PrivateAppSubnet1Cidr: { Type: String, Default: '10.0.4.0/22' }
  PrivateAppSubnet2Cidr: { Type: String, Default: '10.0.8.0/22' }

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

  KubernetesVersion:
    Type: String
    # 최신버전은 1.35인데, 1계단만 다운함.
    Default: '1.34'

Resources:
  # ==========================================
  # 1. VPC & IGW
  # ==========================================
  MainVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags: [{ Key: Name, Value: !Sub "${ServiceName}-vpc" }]

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties: { Tags: [{ Key: Name, Value: !Sub "${ServiceName}-igw" }] }

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: { VpcId: !Ref MainVPC, InternetGatewayId: !Ref InternetGateway }

  # ==========================================
  # 2. Subnets (2중화)
  # ==========================================
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: !Ref PublicSubnet1Cidr
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags:
        - { Key: Name, Value: !Sub "${ServiceName}-public-1" }
        - { Key: "kubernetes.io/role/elb", Value: "1" }

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: !Ref PublicSubnet2Cidr
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      MapPublicIpOnLaunch: true
      Tags:
        - { Key: Name, Value: !Sub "${ServiceName}-public-2" }
        - { Key: "kubernetes.io/role/elb", Value: "1" }

  PrivateAppSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: !Ref PrivateAppSubnet1Cidr
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags:
        - { Key: Name, Value: !Sub "${ServiceName}-private-app-1" }
        - { Key: "kubernetes.io/role/internal-elb", Value: "1" }
        - { Key: "karpenter.sh/discovery", Value: !Sub "${ServiceName}-cluster" }

  PrivateAppSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: !Ref PrivateAppSubnet2Cidr
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags:
        - { Key: Name, Value: !Sub "${ServiceName}-private-app-2" }
        - { Key: "kubernetes.io/role/internal-elb", Value: "1" }
        - { Key: "karpenter.sh/discovery", Value: !Sub "${ServiceName}-cluster" }

  PrivateDBSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: !Ref PrivateDBSubnet1Cidr
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      Tags: [{ Key: Name, Value: !Sub "${ServiceName}-private-db-1" }]

  PrivateDBSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: !Ref PrivateDBSubnet2Cidr
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      Tags: [{ Key: Name, Value: !Sub "${ServiceName}-private-db-2" }]

  # ==========================================
  # 3. NAT & Routing
  # ==========================================
  NatEIP1: { Type: AWS::EC2::EIP, Properties: { Domain: vpc } }
  NatEIP2: { Type: AWS::EC2::EIP, Properties: { Domain: vpc } }

  NatGW1:
    Type: AWS::EC2::NatGateway
    DependsOn: AttachGateway # IGW가 VPC에 완전히 붙은 후 생성되도록 강제
    Properties:
      AllocationId: !GetAtt NatEIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags: [ { Key: Name, Value: !Sub "${ServiceName}-nat-1" } ]

  NatGW2:
    Type: AWS::EC2::NatGateway
    DependsOn: AttachGateway
    Properties:
      AllocationId: !GetAtt NatEIP2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags: [ { Key: Name, Value: !Sub "${ServiceName}-nat-2" } ]

  # --- Private App Routing (AZ 1) ---
  PrivateAppRT1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags: [ { Key: Name, Value: !Sub "${ServiceName}-private-app-rt-1" } ]


  # --- Private App Routing (AZ 2) ---
  PrivateAppRT2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags: [ { Key: Name, Value: !Sub "${ServiceName}-private-app-rt-2" } ]



  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties: { VpcId: !Ref MainVPC, Tags: [{ Key: Name, Value: !Sub "${ServiceName}-public-rt" }] }
  PublicRoute:
    Type: AWS::EC2::Route
    Properties: { RouteTableId: !Ref PublicRT, DestinationCidrBlock: 0.0.0.0/0, GatewayId: !Ref InternetGateway }

  PrivateRouteApp1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateAppRT1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGW1
  PrivateRouteApp2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateAppRT2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGW2

  # Route Table Associations
  RTAssocPub1: { Type: AWS::EC2::SubnetRouteTableAssociation, Properties: { SubnetId: !Ref PublicSubnet1, RouteTableId: !Ref PublicRT } }
  RTAssocPub2: { Type: AWS::EC2::SubnetRouteTableAssociation, Properties: { SubnetId: !Ref PublicSubnet2, RouteTableId: !Ref PublicRT } }

  RTAssocPrivApp1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateAppSubnet1
      RouteTableId: !Ref PrivateAppRT1
  RTAssocPrivApp2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateAppSubnet2
      RouteTableId: !Ref PrivateAppRT2

  # [문법 교정 부분] DB Subnets are completely isolated (No Internet/NAT route)
  # DB 전용 격리 라우팅 테이블 명시적 생성 및 연결
  PrivateDBRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags: [{ Key: Name, Value: !Sub "${ServiceName}-private-db-rt" }]

  RTAssocPrivDB1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateDBSubnet1
      RouteTableId: !Ref PrivateDBRT

  RTAssocPrivDB2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateDBSubnet2
      RouteTableId: !Ref PrivateDBRT
  # ==========================================
  # 4. Security Groups
  # ==========================================
  # 이하, BastionSG는 ssh 터미널 사용에 따른 임시코드 입니다.
  # 추후, 구축 완료시. 해당 코드를 삭제하고 아래 BastionSG 코드를 활성화 하세요.
  BastionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH
      VpcId: !Ref MainVPC
      SecurityGroupIngress: [{ IpProtocol: tcp, FromPort: 22, ToPort: 22, CidrIp: 0.0.0.0/0 }]
  # 아래는 공인 IP 할당을 통한 SSH 제한 설정
  #      SecurityGroupIngress:
  #        - { IpProtocol: tcp, FromPort: 22, ToPort: 22, CidrIp: "내.공인.IP.주소/32" }

  # 추후 활성화 해야하는
  #  BastionSG:
  #    Type: AWS::EC2::SecurityGroup
  #    Properties:
  #      GroupDescription: Allow strictly no inbound ports (SSM Only Access)
  #      VpcId: !Ref MainVPC
  #      # SecurityGroupIngress: 아무것도 설정하지 않음 (전면 차단)

  ## public Subnet, 보안 그룹 설정
  # 해당 영역, Karpenter를 이용한 Ingress 설정 및 LoadBalancer 설정
  ## 검색어 --> 9. AWS Load Balancer Controller 설치 (Ingress 지원용)
  # 으로, 모두 주석 처리.

#  PublicAppSG:
#    Type: AWS::EC2::SecurityGroup
#    Properties:
#      GroupDescription: Public App SG (ALB)
#      VpcId: !Ref MainVPC
#      SecurityGroupIngress:
#        - { IpProtocol: tcp, FromPort: 80, ToPort: 80, CidrIp: 0.0.0.0/0 }
#        - { IpProtocol: tcp, FromPort: 22, ToPort: 22, SourceSecurityGroupId: !GetAtt BastionSG.GroupId }
#      Tags:
#        - { Key: Name, Value: !Sub "${ServiceName}-alb-sg" }

  ## Eks Node Group(현재 설정상 Private App 영역, 보안그룹 설정)
  EksNodeSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for EKS App Nodes
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - { IpProtocol: tcp, FromPort: 80, ToPort: 65535,  CidrIp: !Ref VpcCidrBlock } # VPC 내부 라우팅 전체 허용
        - { IpProtocol: tcp, FromPort: 9443, ToPort: 9443, CidrIp: !Ref VpcCidrBlock }
      Tags: # <--- SecurityGroupIngress 밖으로 빼서 별도 정의해야 합니다.
        - { Key: "karpenter.sh/discovery", Value: !Sub "${ServiceName}-cluster" }
        - { Key: Name, Value: !Sub "${ServiceName}-eks-node-sg" }

  DBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for DB EC2
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - { IpProtocol: tcp, FromPort: 3306, ToPort: 3306, SourceSecurityGroupId: !GetAtt EksNodeSG.GroupId } # WAS Pods -> DB

  # ==========================================
  # 5. Bastion (AWS 공식 CLI 도구 탑재 및 인증 자동화)
  # ==========================================
  BastionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${ServiceName}-bastion-role" # 역할 이름 명시적 지정
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement: [ { Effect: Allow, Principal: { Service: ec2.amazonaws.com }, Action: sts:AssumeRole } ]
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AdministratorAccess"
        - "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore" # SSH 키 없이 웹 터미널 접속(SSM) 권한 추가

  BastionProfile:
    Type: AWS::IAM::InstanceProfile
    Properties: { Roles: [ !Ref BastionRole ] }

  # EKS Access Entry 추가 (Bastion에게 클러스터 관리 권한 자동 부여)
  BastionAccessEntry:
    Type: AWS::EKS::AccessEntry
    Properties:
      ClusterName: !Ref EksCluster
      PrincipalArn: !GetAtt BastionRole.Arn
      Type: STANDARD
      AccessPolicies:
      ###      주요 Access Policy들은 다음과 같습니다. 필요에 따라 권한을 조정하실 때 참고하세요.
      #      ClusterAdmin: arn:aws:eks::aws:cluster-access-policy/AmazonEKSClusterAdminPolicy (모든 권한)
      #      Admin: arn:aws:eks::aws:cluster-access-policy/AmazonEKSAdminPolicy (대부분의 관리 권한)
      #      Edit: arn:aws:eks::aws:cluster-access-policy/AmazonEKSEditPolicy (수정 권한)
      #      View: arn:aws:eks::aws:cluster-access-policy/AmazonEKSViewPolicy (읽기 권한)
        # 'iam'이 아니라 'eks'이며, 'cluster-access-policy' 경로를 사용해야 합니다.
        # - PolicyArn: arn:aws:iam::aws:policy/AmazonEKSClusterAdminPolicy
        - PolicyArn: arn:aws:eks::aws:cluster-access-policy/AmazonEKSClusterAdminPolicy
          AccessScope:
            Type: cluster

  BastionServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.small
      # t3.nano 로 했다가, eksctl 안되는 문제 생김;
      ImageId: !Ref LatestAmiId
      KeyName: !Ref KeyName
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds: [!Ref BastionSG]
      IamInstanceProfile: !Ref BastionProfile
      Tags: [{ Key: Name, Value: !Sub "${ServiceName}-bastion" }]
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          ## 1. Bastion 서버 내부, 명령어 수행을 위한 준비
            set -ex # 에러 발생 시 즉시 중단 및 로그 출력
            exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
  
            echo "Step 1: Basic Tools"
            dnf update -y && dnf install -y unzip wget tar
  
            echo "Step 2: Install CLI Tools"
            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
            unzip awscliv2.zip && ./aws/install
          
                      
          ## 2-1. kubesctl 설치
            curl -LO "https://dl.k8s.io/release/v1.29.0/bin/linux/amd64/kubectl"
            chmod +x kubectl
            mv kubectl /usr/local/bin/
          
          ## 2-2. argo_cd cli 설치
            echo "Step 2.1: Install ArgoCD CLI"
            VERSION=$(curl -L -s https://api.github.com/repos/argoproj/argo-cd/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
            curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/download/$VERSION/argocd-linux-amd64
            install -m 755 argocd-linux-amd64 /usr/local/bin/argocd
            rm argocd-linux-amd64
          
          ## 2-3. eksctl 설치
          # eksctl (보다 견고한 설치 방식)
            curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_Linux_amd64.tar.gz" | tar xz -C /tmp
            mv /tmp/eksctl /usr/local/bin/
          
          ## 2-4. helm 설치
            curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
  
          ## 3. EKS 접속 및 대기 (클러스터가 생성될 때까지 대기)
          # ServiceName properties를 이용한 ClusterName 생성
            echo "Step 3: Wait for EKS Cluster to be ACTIVE"
            CLUSTER_NAME="${ServiceName}-cluster"
          # CF를 실행하는 region의 정보를 가지고 와서, Target Region 할당
            REGION="${AWS::Region}"
          
          # 클러스터가 ACTIVE 상태가 될 때까지 최대 15분 대기 루프 --> 이거 없으니까, cluster 올라오는 시간 때문에 뒤에 개박살나요 ㅠㅜ
            for i in {1..30}; do
              STATUS=$(aws eks describe-cluster --name $CLUSTER_NAME --region $REGION --query 'cluster.status' --output text 2>/dev/null || echo "WAITING")
              if [ "$STATUS" == "ACTIVE" ]; then
                echo "Cluster is ACTIVE."
                break
              fi
              echo "Waiting for cluster... ($i/30)"
              sleep 30
            done
  
            echo "Step 4: Configure Kubeconfig"
            aws eks update-kubeconfig --region $REGION --name $CLUSTER_NAME
  
          # [핵심 추가] 현재 root 세션에서 kubectl이 길을 잃지 않도록 설정
            export KUBECONFIG=/root/.kube/config
          # Access Entry 권한이 실제 API 서버에 반영될 때까지 확인합니다.
            echo "Waiting for K8s API authorization..."
            for i in {1..20}; do
              if kubectl get nodes &>/dev/null; then
                echo "K8s API is reachable and authorized!"
                break
              fi
              echo "Waiting for authorization... ($i/20)"
              sleep 15
            done
          # --> 위 구문 없으면, eks cluster 생성만 되고 실행 확인 안된 상태로 넘어가서. 아래 구문들에서 에러납니다. 
          
          ## 4. OIDC Provider 연결 (IRSA의 핵심), region 정보 추가.
            eksctl utils associate-iam-oidc-provider --cluster $CLUSTER_NAME \
            --region $REGION --approve
          
          ## 5. Karpenter 컨트롤러용 IAM Role 생성 및 IRSA 연결 (자동화)
            eksctl create iamserviceaccount \
            --cluster $CLUSTER_NAME \
            --region $REGION \
            --name karpenter \
            --namespace karpenter \
            --role-name "${ServiceName}-karpenter-controller-role" \
            --attach-policy-arn "arn:aws:iam::aws:policy/AdministratorAccess" \
            --approve --override-existing-serviceaccounts
          
          ## 6. Namespace 생성
          # [사용자 편의] ec2-user에게도 설정 복사 및 소유권 변경
            mkdir -p /home/ec2-user/.kube
            cp /root/.kube/config /home/ec2-user/.kube/config
            chown -R ec2-user:ec2-user /home/ec2-user/.kube
            echo "export KUBECONFIG=/home/ec2-user/.kube/config" >> /home/ec2-user/.bashrc
          
          # --> 위 구문, 없으면 얘가 kubectl 실행 못해서. 쉘 끊깁니다.
          
            for ns in dev stg prod monitoring; do
              kubectl create namespace $ns --dry-run=client -o yaml | kubectl apply -f -
            done
          
          # 7. Karpenter 설치 (Helm) - 엔드포인트 및 인터럽트 큐 최적화
          # ${EksCluster}는 aws를 통해 만들어진 자원의 명칭으로 정보를 할당한다.
            CLUSTER_ENDPOINT=$(aws eks describe-cluster --name "${EksCluster}" --query 'cluster.endpoint' --output text)
          
            helm upgrade --install karpenter oci://public.ecr.aws/karpenter/karpenter \
              --version 1.2.0 \
              --namespace karpenter \
              --set serviceAccount.create=false \
              --set serviceAccount.name=karpenter \
              --set settings.clusterName="${EksCluster}" \
              --set settings.clusterEndpoint=$CLUSTER_ENDPOINT \
              --wait
          
          # 8. AWS Load Balancer Controller 설치 (Ingress 지원용)
          # IRSA용 IAM Role 생성 (eksctl 활용)
          # ALB Controller 권한 변경,  --attach-policy-arn "arn:aws:iam::aws:policy/AmazonEKS_FullAccess" \
            eksctl create iamserviceaccount \
              --cluster "${EksCluster}" \
              --region "${AWS::Region}" \
              --namespace kube-system \
              --name aws-load-balancer-controller \
              --role-name "${ServiceName}-alb-controller-role" \
              --attach-policy-arn "arn:aws:iam::aws:policy/AdministratorAccess" \
              --approve --override-existing-serviceaccounts
          
          # eks, alb controller 설치
            helm repo add eks https://aws.github.io/eks-charts
            helm repo update
            helm upgrade --install aws-load-balancer-controller eks/aws-load-balancer-controller \
              -n kube-system \
              --set clusterName=${EksCluster} \
              --set serviceAccount.create=false \
              --set serviceAccount.name=aws-load-balancer-controller \
              --set vpcId=${MainVPC} \
              --set region=${AWS::Region} \
              --wait
          
          # 9. 모니터링 도구 설치 (Prometheus & Grafana)
            helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
            helm repo update
          ## 아래 옵션은 확인용으로 잠깐 줬습니다. 어차피 IP Cluster를 통해서 grafana로 연결되어 보여지기 때문에 별도의 설정은 하지 않습니다.
          #              --set prometheus.service.type=LoadBalancer \
          #              --set alertmanager.service.type=LoadBalancer \
            helm upgrade --install monitoring-stack prometheus-community/kube-prometheus-stack --namespace monitoring \
              --set grafana.adminPassword='admin' \
              --set grafana.service.type=LoadBalancer \

              --wait
  
          # 10. ArgoCD 설치 (GitOps 엔진)
          # --server-side 옵션 안넣어주면 Log로 자원 정보를 끌어오다가, 중간에 멈춘다...(추가는 해줬지만. 아직 검증은 안됨...)
            kubectl create namespace argocd
            kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml \
              --server-side
              
          # [비밀번호 초기화 로직 추가]
            echo "Waiting for ArgoCD Server to be ready..."
            kubectl wait --for=condition=available deployment/argocd-server -n argocd --timeout=300s
          
          # ArgoCD CLI를 위한 환경 변수 강제 설정 --> 해당 설정이 없을 경우, INITIAL_PW의 초기화 구문에서 $Home 경로를 찾지 못함.
            export HOME=/root
            export KUBECONFIG=/root/.kube/config
          
            NEW_PW="admin123" 
          
          # argocd login 없이 직접 비밀번호 해시 주입
          ## argocd CLI를 사용하여 bcrypt 해시 생성, 뒤에 있는 tr -d '\n'이 없으면 argo_cd에서 해석 오류남...
          ### 아래 코드를 적용해도, hash-pasword 함수를 찾을 수 없어서 에러 남. 
          # HASHED_PW=$(argocd admin hash-password "${!NEW_PW}" | tr -d '\n')
          #### CLI 버전 이슈 해결을 위해 AL2023 내장 Python3로 bcrypt 해시 직접 생성
          # crypt.METHOD_BLOWFISH는 ArgoCD가 요구하는 $2b$ (bcrypt) 해시를 생성합니다.
            HASHED_PW=$(python3 -c "import crypt; print(crypt.crypt('${!NEW_PW}', crypt.mksalt(crypt.METHOD_BLOWFISH)))")
          
          # argocd-secret 직접 패치 (비밀번호 및 변경 시간 업데이트)
            kubectl patch secret argocd-secret -n argocd -p "{\"stringData\": {\"admin.password\": \"${!HASHED_PW}\", \"admin.passwordMtime\": \"$(date +%FT%T%Z)\"}}"

          # 초기 비밀번호 시크릿 삭제 (보안 및 패치 활성화)
            kubectl -n argocd delete secret argocd-initial-admin-secret
          
          ### 이하, argo_cd --core를 통한 grpc를 통한 초기화 시도 과정. 결국은, 
          #          # 초기 비밀번호 획득
          #            INITIAL_PW=$(kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d)
          #            NEW_PW="admin123"  # <-- 원하는 비밀번호로 수정하세요.
          #          
          #          # argocd CLI가 default가 아닌 argocd 네임스페이스를 바라보도록 컨텍스트 강제 변경
          #          # --> 해당 구문이 없으면, default ns가 argocd-cm으로 지정되어. login할 때, 
          #            kubectl config set-context --current --namespace=argocd
          #          
          #          # ArgoCD CLI의 'Core' 모드를 사용하여 API 서버 통신 없이 로컬에서 즉시 변경
          #            argocd admin initial-password -n argocd  # 초기화 확인용
          #            argocd login --core # API 서버 접속 없이 쿠버네티스 권한으로 로그인
          #            argocd account update-password --current-password "${!INITIAL_PW}" --new-password "${!NEW_PW}"
          #
          #          # 보안을 위해 초기 비밀번호 시크릿 삭제
          #            kubectl -n argocd delete secret argocd-initial-admin-secret
          #          
          #          # (선택) 작업 완료 후 다른 작업에 영향을 주지 않도록 default 네임스페이스로 원복
          #          # --> 위에서 config ns를 바꿔주는 작업이 있었기 때문에, 아래에서 원복합니다.
          #            kubectl config set-context --current --namespace=default
  
          # 11. ArgoCD를 외부에서 접속 가능하도록 설정 (LoadBalancer 타입)
          # ALB Controller가 설치되어 있으므로 Ingress로 생성해도 되지만,
          # 실습 편의상 Service 타입을 변경하여 ALB 생성을 유도합니다.
            kubectl patch svc argocd-server -n argocd -p '{"spec": {"type": "LoadBalancer"}}'
  
          
          # 12. App-of-Apps 패턴 (ArgoCD가 자신의 설정을 Git에서 가져오게 함)
          # DE님의 Git 리포지토리가 준비되었다면 아래 주석을 해제하여 자동 연결 가능합니다.
          # kubectl apply -f - <<EOF
          # apiVersion: argoproj.io/v1alpha1
          # kind: Application
          # metadata:
          #   name: root-application
          #   namespace: argocd
          # spec:
          #   project: default
          #   source:
          #     repoURL: 'https://github.com/YOUR_GIT_ID/de-camping-msa-gitops.git'
          #     targetRevision: HEAD
          #     path: root
          #   destination:
          #     server: 'https://kubernetes.default.svc'
          #     namespace: argocd
          # EOF
          
          
          # 13. Karpenter NodePool 배포 (실제 노드 확장을 위한 설정)
          # v0.32 버전부터 Provisioner 대신 NodePool을 사용합니다.
          # 리눅스 or k8s 명령어에서 -f 옵션 뒤 - 표기는, 표준 입력에서 데이터를 읽어온다는 의미로,
          # 이후 구문을 파일처럼 읽어와서 처리한다는 의미.
            cat <<EOF | kubectl apply -f -
          apiVersion: karpenter.sh/v1
          kind: NodePool
          metadata:
            name: default
          spec:
            template:
              spec:
                nodeClassRef:
                  group: karpenter.k8s.aws
                  kind: EC2NodeClass
                  name: default
                requirements:
                  - key: "karpenter.sh/capacity-type"
                    operator: In
                    values: ["spot"]
                  - key: "kubernetes.io/arch"
                    operator: In
                    values: ["amd64"]
            limits:
              cpu: 100
          ---
          apiVersion: karpenter.k8s.aws/v1
          kind: EC2NodeClass
          metadata:
            name: default
          spec:
            # 필수 추가: 어떤 AMI를 찾을지 명시 (AL2023의 경우 태그나 이름을 지정)
            amiSelectorTerms:
              - alias: al2023@latest
            role: "${EksNodeRole}"
            subnetSelectorTerms:
              - tags:
                  karpenter.sh/discovery: "${EksCluster}"
            securityGroupSelectorTerms:
              - tags:
                  karpenter.sh/discovery: "${EksCluster}"
          EOF
  # ==========================================
  # 6. Public EC2 Instances
  ## 해당 부분 ingress 설정으로 test 코드 삭제함

  # ==========================================
  # 7. Private DB EC2 Instances (EBS 명시적 추가 할당)
  # ==========================================
  #  PrivateDB1:
  #    Type: AWS::EC2::Instance
  #    Properties:
  #      InstanceType: t3.medium
  #      ImageId: !Ref LatestAmiId
  #      KeyName: !Ref KeyName
  #      SubnetId: !Ref PrivateDBSubnet1
  #      SecurityGroupIds: [!Ref DBSG]
  #      Tags: [{ Key: Name, Value: !Sub "${ServiceName}-private-db-1" }]
  #      BlockDeviceMappings:
  #        - DeviceName: /dev/sdf
  #          Ebs:
  #            VolumeSize: 50
  #            VolumeType: gp3
  #            DeleteOnTermination: false
  #
  #  PrivateDB2:
  #    Type: AWS::EC2::Instance
  #    Properties:
  #      InstanceType: t3.medium
  #      ImageId: !Ref LatestAmiId
  #      KeyName: !Ref KeyName
  #      SubnetId: !Ref PrivateDBSubnet2
  #      SecurityGroupIds: [!Ref DBSG]
  #      Tags: [{ Key: Name, Value: !Sub "${ServiceName}-private-db-2" }]
  #      BlockDeviceMappings:
  #        - DeviceName: /dev/sdf
  #          Ebs:
  #            VolumeSize: 50
  #            VolumeType: gp3
  #            DeleteOnTermination: false

  # ==========================================
  # 8. EKS Cluster & App NodeGroup
  # ==========================================
  EksClusterRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${ServiceName}-eks-cluster-role"
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement: [ { Effect: Allow, Principal: { Service: eks.amazonaws.com }, Action: sts:AssumeRole } ]
      ManagedPolicyArns: [ "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy" ]

  EksNodeRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub "${ServiceName}-eks-node-role"
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement: [ { Effect: Allow, Principal: { Service: ec2.amazonaws.com }, Action: sts:AssumeRole } ]
      ManagedPolicyArns:
        - "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
        - "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
        - "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
        - "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore" # 노드 트러블슈팅용 SSM 접근 권한
        # 볼륨은 일단, 주석처리하고 실행한다.
        # - "arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy" # <--- 추가: DB 볼륨 관리용
      # 커스텀 권한(Inline Policy) 직접 명시 영역
      Policies:
        - PolicyName: !Sub "${ServiceName}-node-custom-policy"
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - "s3:GetObject"
                  - "s3:ListBucket"
                Resource: "*" # 필요 시 특정 S3 버킷이나, ALB Controller 권한 등으로 교체/확장 가능
  EksCluster:
    Type: AWS::EKS::Cluster
    Properties:
      Name: !Sub "${ServiceName}-cluster"
      Version: !Ref KubernetesVersion
      RoleArn: !GetAtt EksClusterRole.Arn
      ResourcesVpcConfig:
        SubnetIds: [ !Ref PrivateAppSubnet1, !Ref PrivateAppSubnet2 ]
        SecurityGroupIds: [ !GetAtt EksNodeSG.GroupId ]
      AccessConfig:
        AuthenticationMode: API_AND_CONFIG_MAP # API 방식 활성화 (Access Entry 사용을 위해 필수)

   # EBS 설정은 일단, 비활성 상태로 둔다.
#  EbsCsiDriverAddon:
#    Type: AWS::EKS::Addon
#    Properties:
#      AddonName: aws-ebs-csi-driver
#      ClusterName: !Ref EksCluster
#      ResolveConflicts: OVERWRITE

  PrivateAppNodeGroup:
    Type: AWS::EKS::Nodegroup
    DependsOn: EksCluster
    Properties:
      ClusterName: !Ref EksCluster
      NodegroupName: !Sub "${ServiceName}-private-app-nodes"
      NodeRole: !GetAtt EksNodeRole.Arn
      Subnets: [ !Ref PrivateAppSubnet1, !Ref PrivateAppSubnet2 ]
      InstanceTypes: [ "t3.medium" ]
      ScalingConfig: { MinSize: 2, DesiredSize: 2, MaxSize: 4 }
      Tags:
        Name: !Sub "${ServiceName}-app-node" # 이 태그가 EC2의 'Name' 필드로 표시됩니다.
        Project: !Ref ServiceName

  ## Karpenter로 생성된 EC2 instance가,cluster 아래에서 관리되게 하기 위한 설정.
  # IAM Role
  KarpenterNodeInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Sub "${ServiceName}-karpenter-node-profile"
      Roles: [ !Ref EksNodeRole ]

  # Karpenter 노드가 클러스터에 조인할 수 있도록 허용
  EksNodeAccessEntry:
    Type: AWS::EKS::AccessEntry
    Properties:
      ClusterName: !Ref EksCluster
      PrincipalArn: !GetAtt EksNodeRole.Arn
      Type: EC2_LINUX # EC2 노드임을 명시
# ==========================================
# 9. Outputs (생성된 IAM 정보 등 결과값 출력)
# ==========================================
Outputs:
  BastionRoleArn:
    Description: "IAM Role ARN for Bastion Server"
    Value: !GetAtt BastionRole.Arn
    Export:
      Name: !Sub "${ServiceName}-BastionRoleArn"

  EksNodeRoleArn:
    Description: "IAM Role ARN for EKS App Nodes"
    Value: !GetAtt EksNodeRole.Arn
    Export:
      Name: !Sub "${ServiceName}-EksNodeRoleArn"

  EksClusterRoleArn:
    Description: "IAM Role ARN for EKS Cluster Control Plane"
    Value: !GetAtt EksClusterRole.Arn
